# Pi_Server

./: .env.example  .gitignore  AGENTS.md  CMakeLists.txt  README.md  package_install.sh  requirements.txt  server_config.example.ini  timer_README.md
config/: parking_slots.json  timer.conf
db/: schema.sql  seed.sql
docs/: ARCHITECTURE_TRACEABILITY.md  DB_IMPLEMENTATION.md  DB_SCHEMA_PROPOSAL.md  DEVELOPER_WALKTHROUGH.md  HTTP_API.md  IMPLEMENTATION_PLAN.md  MERGE_NOTES.md  MQTT_PROTOCOL_PROPOSAL.md  PARKING_ALERT_DRIVER.md  SENSOR_COMMUNICATION_ERROR_HANDLING.md  TEST_SCENARIOS.md  UART_LORA_PROTOCOL.md
docs/architecture/: README.md
docs/code_guide/: index.html
docs/doxygen_timer/html/: EventDatabase_8cpp.html  EventDatabase_8cpp.js  EventDatabase_8cpp_source.html  EventDatabase_8hpp.html  EventDatabase_8hpp.js  EventDatabase_8hpp_source.html  EventManager_8cpp.html  EventManager_8cpp.js  EventManager_8cpp_source.html  EventManager_8hpp.html  EventManager_8hpp.js  EventManager_8hpp_source.html  ParkingSlotManager_8cpp.html  ParkingSlotManager_8cpp_source.html  ParkingSlotManager_8hpp.html  ParkingSlotManager_8hpp.js  ParkingSlotManager_8hpp_source.html  README_8md.html  RuntimeConfig_8cpp.html  RuntimeConfig_8cpp.js  RuntimeConfig_8cpp_source.html  RuntimeConfig_8hpp.html  RuntimeConfig_8hpp.js  RuntimeConfig_8hpp_source.html  TimerManager_8cpp.html  TimerManager_8cpp_source.html  TimerManager_8hpp.html  TimerManager_8hpp.js  TimerManager_8hpp_source.html  Types_8cpp.html  Types_8cpp.js  Types_8cpp_source.html  Types_8hpp.html  Types_8hpp.js  Types_8hpp_source.html  annotated.html  annotated_dup.js  classes.html  classparking__timer_1_1EventDatabase.html  classparking__timer_1_1EventDatabase.js  (+68 more)
docs/doxygen_timer/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_2b.js  all_2c.js  all_2d.js  all_2e.js  all_2f.js  all_3.js  all_30.js  all_31.js  all_32.js  all_34.js  all_35.js  all_36.js  (+81 more)
docs/reference/: README.md
driver/parking_alert/: 99-parking-alert.rules  Kbuild  Makefile  parking_alert.c
include/app/: AppConfig.hpp
include/bestshot/: BestShotReceiver.hpp
include/camera/: CameraChannel.hpp  RtspStreamReceiver.hpp
include/database/: EventDatabase.hpp  db_manager.h
include/device/: LinuxDriverAdapter.hpp  LoRaDriver.hpp  SensorLinkManager.hpp  UartDriver.hpp
include/event/: CameraEvent.hpp  CameraEventParser.hpp  EventPayloadBuilder.hpp  FireAlarmEvent.hpp  FireAlarmManager.hpp  SystemEventReporter.hpp
include/http/: ParkingHttpServer.hpp
include/mqtt/: MqttEventBridge.hpp
include/ocr/: GeminiOcrClient.hpp  OcrWorker.hpp  PlateImageEnhancer.hpp  PlateNormalizer.hpp
include/parking/: ActiveParkingSessionIndex.hpp  CaptureRequest.hpp  CaptureScheduler.hpp  CaptureSchedulerRuntime.hpp  ParkingOccupancyConfirmationGate.hpp  ParkingOccupancySession.hpp  ParkingSensorEvent.hpp  ParkingSensorSequenceGuard.hpp  ParkingSessionWorker.hpp  ParkingSlot.hpp  ParkingSlotConfig.hpp  ParkingSlotManager.hpp  ParkingTriggerCoordinator.hpp  SensorSlotIndex.hpp
include/parking_timer/: EventDatabase.hpp  EventManager.hpp  ParkingSlotManager.hpp  RuntimeConfig.hpp  TimerManager.hpp  Types.hpp
include/sensor/: FireSensorMessage.hpp  HallParkingService.hpp  ParkingSensorEventAdapter.hpp  SensorLinkManager.hpp  SensorProtocolMessage.hpp  SensorProtocolParser.hpp
include/snapshot/: SnapshotStorage.hpp
include/uapi/: parking_alert.h
include/util/: Logger.hpp  StringUtil.hpp  TimeUtil.hpp  UrlMasker.hpp
src/: main.cpp
src/app/: AppConfig.cpp
src/bestshot/: BestShotReceiver.cpp
src/camera/: RtspStreamReceiver.cpp
src/database/: EventDatabase.cpp  EventDatabaseTimer.cpp  db_manager.c
src/device/: LinuxDriverAdapter.cpp  LoRaDriver.cpp  SensorLinkManager.cpp  UartDriver.cpp
src/event/: CameraEventParser.cpp  EventPayloadBuilder.cpp  FireAlarmManager.cpp  SystemEventReporter.cpp
src/http/: ParkingHttpServer.cpp
src/mqtt/: MqttEventBridge.cpp
src/ocr/: GeminiOcrClient.cpp  OcrWorker.cpp  PlateImageEnhancer.cpp  PlateNormalizer.cpp
src/parking/: ActiveParkingSessionIndex.cpp  CaptureScheduler.cpp  CaptureSchedulerRuntime.cpp  ParkingOccupancyConfirmationGate.cpp  ParkingOccupancySession.cpp  ParkingSensorSequenceGuard.cpp  ParkingSessionWorker.cpp  ParkingSlotConfig.cpp  ParkingSlotManager.cpp  ParkingTriggerCoordinator.cpp  SensorSlotIndex.cpp
src/sensor/: FireSensorMessage.cpp  HallParkingService.cpp  ParkingSensorEventAdapter.cpp  SensorLinkManager.cpp  SensorProtocolParser.cpp
src/snapshot/: SnapshotStorage.cpp
src/timer/: EventDatabase.cpp  EventManager.cpp  ParkingSlotManager.cpp  RuntimeConfig.cpp  TimerManager.cpp  Types.cpp  main.cpp
src/util/: Logger.cpp  StringUtil.cpp  TimeUtil.cpp  UrlMasker.cpp
tests/fixtures/: README.md  parking_slots.json
tests/integration/: DbManagerTest.c  FirePipelineTool.cpp  GeminiOcrTest.cpp  HallTimerIntegrationTest.cpp  HttpApiTest.cpp  UartFireListenerTool.cpp
tests/mocks/: README.md
tests/timer/: timer_tests.cpp
tests/unit/: CaptureSchedulerTest.cpp  FireAlarmTest.cpp  ParkingDomainTest.cpp  ParkingOccupancyConfirmationGateTest.cpp  ParkingSessionWorkerTest.cpp  README.md  SensorParkingPipelineTest.cpp  SystemEventReporterTest.cpp  UartLoRaDriverTest.cpp
tools/: backup_db.sh  build_docs.sh  db_init.sql  db_seed.sql  fake_fire_sensor.sh  fire_setup.sh  inspect_db.sh  parking_alert_ctl.c  parking_link_tool.cpp  reset_db.sh
